Fix E2E selector for new buttons and align content

--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,7 @@ ul {
 
 .table-row__text {
   flex-grow: 1;
+  align-self: center;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
